# bitcoin-chain-ipc

./: CMakeLists.txt  LICENSE  README.md  trace.out
src/: chain-ipc.cpp
src/ipc/capnp/: chain.capnp  common.capnp  handler.capnp  init.capnp
